--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 pandas>=0.18.1
-Flask == 2.0.1
-Flask-Cors == 3.0.10
+numpy
+Flask==1.0.2
+Flask-Cors==3.0.7
 webdriver-manager>=3.5.1
 selenium>=4.1.2
+pymssql == 2.2.0
+sqlalchemy == 1.4
